:lipstick fix window size of browser can overflow screen by width

--- a/src/assets/css/components/apps/browser/_browser.scss
+++ b/src/assets/css/components/apps/browser/_browser.scss
@@ -20,6 +20,7 @@
 
   &:not(.window--fullscreen) {
     .browser {
+      max-width: 90vw;
       height: 90vh;
       aspect-ratio: 16/10;
     }
